# project-lambda-client

./: CMakeLists.txt  README.md
include/: Client.hpp  Color.h  Renderer.hpp  const.h
include/render/: GameObject.hpp  Rectangle.hpp  Renderer.hpp  Shader.hpp  ShaderRegistry.hpp  Triangle.hpp
proto/: movement.proto
shaders/: gameobject.fs  shader.vs
src/: Client.cpp  Renderer.cpp  main.cpp
src/render/: GameObject.cpp  Rectangle.cpp  Renderer.cpp  Shader.cpp  ShaderRegistry.cpp  Triangle.cpp
